# libplctag

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  LICENSE.LPGL  Makefile  README.md  TODO.txt  azure-pipeline-macos.yml  azure-pipeline-ubuntu-x64.yml  azure-pipeline-ubuntu-x86.yml  azure-pipeline-ubuntu.yml  azure-pipeline-windows-x64.yml  azure-pipeline-windows-x86.yml  azure-pipeline-windows.yml  azure-pipelines.yml  callchain.txt  libplctag.pc.in
.github/workflows/: ci.yml  ci.yml.in  macos_x64.yml  macos_x64.yml.in  ubuntu_x64.yml  ubuntu_x64.yml.in  ubuntu_x86.yml  ubuntu_x86.yml.in  windows_x64.yml  windows_x64.yml.in  windows_x86.yml  windows_x86.yml.in
contrib/CMake/: CMakeLists.txt  README
contrib/Python/: run.sh
contrib/Python/plctag/: libplctag.py
contrib/cpp/Xinthose/: Makefile
contrib/cpp/Xinthose/include/: plctag.hpp
contrib/cpp/valdes/: cip.cpp  cip.h  cip_main.cpp
debian/: changelog  control  copyright  debhelper-build-stamp  files  libplctag-dev.install  libplctag-dev.manpages  libplctag2-dev.dirs  libplctag2-dev.install  libplctag2-dev.manpages  libplctag2.install  manpage.3.ex  rules  shlibs.local.ex  watch
debian/attic/: README.Debian  README.source  libplctag.cron.d.ex  libplctag.doc-base.EX  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst  postrm  preinst  prerm
doc/: libplctag.3
examples/: Makefile  README.txt  async.c  data_dumper.c  multithread.c  multithread_cached_read.c  multithread_plc5.c  multithread_plc5_dhp.c  plc5.c  simple.c  simple_dual.c  slc500.c  stress_test.c  string.c  tag_rw.c  toggle_bool.c  vs.mk  write_string.c
examples/c++_class/: main
lib/: Makefile  libplctag.h  libplctag_tag.c  libplctag_tag.h
lib/ab/: ab.c  ab.h  ab_common.c  ab_common.h  ab_defs.h  cip.c  cip.h  common.c  common.h  connection.c  eip.c  eip.h  eip_cip.c  eip_cip.h  eip_data.h  eip_dhp_pccc.c  eip_dhp_pccc.h  eip_pccc.c  eip_pccc.h  pccc.c  pccc.h  session.c  tag.h  util.c  util.h
lib/linux/: platform.c  platform.h
lib/util/: attr.c  attr.h
lib/windows/: platform.c  platform.h  plc_os_support.c  plc_os_support.h
src/cli/: cli.c  cli.h  getline.c
src/contrib/cli/: README.md  cli.c  getline.h
src/examples/: README.txt  async.c  async_stress.c  barcode_test.c  busy_test.c  data_dumper.c  data_dumper.conf  list_tags.c  list_tags_logix.c  list_tags_micro8x0.c  list_tags_new.c  list_tags_old.c  list_tags_raw.c  list_tags_udts.c  multithread.c  multithread_cached_read.c  multithread_cached_read.c.old  multithread_plc5.c  multithread_plc5_dhp.c  plc5.c  simple.c  simple_cpp.cpp  simple_dual.c  slc500.c  stress_api_lock.c  stress_test.c  string.c  string_non_standard_udt.c  string_plc5.c  string_standard.c  tag_rw.c  tag_rw2.c  test_auto_sync.c  test_callback.c  test_callback2.c  test_callback_ex.c  test_callback_ex_logix.c  test_callback_ex_modbus.c  test_change_tag.c  test_connection_group.c  (+15 more)
src/lib/: Makefile  device.c  device.h  init.c  init.h  lib.c  libplctag.h  libplctag_tag.c  libplctag_tag.h  tag.h  version.c  version.c.in  version.h  version.h.in
src/lib/protocols/ab/: ab.h  ab_common.c  eip.c  eip_cip.h  eip_dhp_pccc.c  eip_pccc.h  pccc.c  pccc.h  request.c  request.h  session.c  session.h
src/lib/util/: attr.c
src/platform/linux/: platform.c  platform.h
src/platform/posix/: platform.c  platform.h
src/platform/windows/: platform.c  platform.h
src/protocols/ab/: ab.h  ab_common.c  ab_common.h  ab_pdu.c  ab_pdu.h  cip.c  cip.h  connection.c  connection.h  defs.h  eip.c  eip.h  eip_cip.c  eip_cip.h  eip_cip_special.c  eip_cip_special.h  eip_dhp_pccc.c  eip_dhp_pccc.h  eip_lgx_pccc.c  eip_lgx_pccc.h  eip_pccc.c  eip_pccc.h  eip_plc5_dhp.c  eip_plc5_dhp.h  eip_plc5_pccc.c  eip_plc5_pccc.h  eip_slc_dhp.c  eip_slc_dhp.h  eip_slc_pccc.c  eip_slc_pccc.h  error_codes.c  error_codes.h  micro800.c  micro800.h  pccc.c  pccc.h  request.c  request.h  session.c  session.h  (+2 more)
src/protocols/ab/micro800/: micro800.c  micro800.h
src/protocols/ab/old/: connection.c
src/protocols/ab2/: ab.c  ab.h  cip.c  cip.h  cip_eip.c  cip_eip.h  cip_layer.c  cip_layer.h  cip_plc.c  cip_plc.h  cip_tag.c  cip_tag.h  common_defs.h  df1.c  df1.h  eip.c  eip.h  eip_layer.c  eip_layer.h  magic_detect_change_tag.c  magic_detect_change_tag.h  magic_list_tags_tag.c  magic_list_tags_tag.h  magic_udt_tag.c  magic_udt_tag.h  pccc.c  pccc.h  pccc_cip_eip.c  pccc_cip_eip.h  pccc_eip_plc.c  pccc_eip_plc.h  pccc_layer.c  pccc_layer.h  plc5.c  plc5.h  plc5_tag.c  plc5_tag.h  raw_cip_tag.c  raw_cip_tag.h  slc_tag.c  (+1 more)
src/protocols/common_protocol/: common_protocol.c  common_protocol.h  slice.h
src/protocols/mb/: mb_common.c  mb_common.h  modbus.c  modbus.h  plc.c  plc.h  tag.c  tag.h
src/protocols/system/: system.c  system.h  tag.h
src/scripts/: error_translate.pl  match_alloc
src/tests/: log  modbus_server.py  run_tests.sh
src/tests/ab_server/src/: cip.c  cip.h  (+16 more)
src/tests/hashtable/: test_hashtable.c
src/tests/lgx_sim/: log.h  main.c  packet.h  session.c  session.h  tags.c  tags.h
src/unported/: README
src/util/: atomic_int.c  atomic_int.h  attr.c  attr.h  bool.h  byteorder.h  debug.c  debug.h  event_loop.c  event_loop.h  event_socket.c  event_socket.h  hash.c  hash.h  hashtable.c  hashtable.h  lock.c  lock.h  macros.h  mem.c  mem.h  mutex.c  mutex.h  platform.h  plc.c  plc.h  protocol.c  protocol.h  protocol_stream.c  protocol_stream.h  rc.c  rc.h  rc_thread.c  rc_thread.h  refcount.c  refcount.h  sleep.c  sleep.h  slice.h  socket.c  (+11 more)
src/wrappers/cpp/: Makefile
src/wrappers/go/: README
src/wrappers/java/: TagRW.java
src/wrappers/pascal/: libplctagv2.pas
src/wrappers/python/: README  run.sh  tag_rw.py
vs/: vs.mk
vs/string/: string.vcxproj  string.vcxproj.filters
vs/tag_rw/: tag_rw.c  tag_rw.vcxproj  tag_rw.vcxproj.filters
vs/tag_rw/utils/: pgetopt.c  pgetopt.h
vs/vs2012/: vs2012.sln  vs2012.vcxproj  vs2012.vcxproj.filters
vs2012/: vs2012.sln  vs2012.vcxproj  vs2012.vcxproj.filters
vs2012/string/: string.vcxproj  string.vcxproj.filters
vs2012/tag_rw/: tag_rw.vcxproj  tag_rw.vcxproj.filters
wrappers/java/: Tag.java
(+20 files in other folders)
